<resources>
    <string name="app_name">MyHelper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="exit">Exit</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="add_task">Add Task</string>
    <string name="content">Content</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="notifycation">Notifycation</string>
    <string name="save">Save</string>
    <string name="upcoming_task">Upcomming Task</string>
    <string name="complete_task">Complete Task</string>
    <string name="uncomplete_task">Uncomplete Task</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="log_out">Log out</string>
    <string name="user_really_used">User name is really used.</string>
    <string name="register_success">Register success</string>
    <string name="view_mode">View mode</string>
    <string name="task_list">Task list</string>
    <string name="one_day">One day</string>
    <string name="some_day">Some day</string>

    <string name="facebook_app_id">1600046080101416</string>
    <string name="fb_login_protocol_scheme">fb1600046080101416</string>

</resources>
