<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtPasswordLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:id="@+id/edtUsername"
                android:text="viettc"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
           android:layout_below="@+id/edtPasswordLayout1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:text="123"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/edtPasswordLayout"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:id="@+id/groupButton">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@color/colorPrimary"
                android:id="@+id/btnLogin"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:background="@color/colorMainBackground"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/btnSignIn"
                android:textAllCaps="false" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:background="@color/colorAccent"
                android:id="@+id/btnExit"
                android:textAllCaps="false" />
        </LinearLayout>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below ="@+id/groupButton"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"/>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_below ="@+id/sign_in_button"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

</RelativeLayout>